--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,18 +3,20 @@ project:
   output-dir: docs
 
 website:
-  title: "habetan-labs.github.io"
+  title: "Habetan Labs"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+      - resources.qmd
 
 format:
   html:
-    theme: cosmo
+    theme: flatly
     css: styles.css
     toc: true
+    page-layout: article
 
 editor: visual
 
